--- a/src/components/dashboard/Sidebar.css
+++ b/src/components/dashboard/Sidebar.css
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1; /* Empurra o "Sair" para baixo */
+  text-align: left;
 }
 
 .sidebar-nav a {
