inseindo boletim, calendário, histórico

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -3,7 +3,7 @@ body {
   background-color: #f2f2f2;
   margin: 0;
   padding: 0;
-  height: 100vh;
+  /*  */
 }
 
 /* Centralizar o card login */
@@ -12,6 +12,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
 .logo {
