--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap");
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -7,6 +9,24 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* Cores base modernas e acessíveis */
+  --cor-principal: #17729b; /* Azul forte, cor do branding */
+  --cor-secundaria: #f59e0b; /* Laranja, para botões e destaque */
+  --cor-fundo-claro: #f4f7f9; /* Fundo suave */
+  --cor-fundo-escuro: #1d2024; /* Fundo para modo escuro / Sidebar */
+  --cor-card: #ffffff;
+  --cor-texto-padrao: #212529;
+  --cor-sombra: rgba(0, 0, 0, 0.15);
+  --transicao-rapida: 0.2s ease-in-out;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  /* min-width: 320px;
+  min-height: 100vh; */
 }
 
 a {
@@ -16,14 +36,6 @@ a {
 }
 a:hover {
   color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
