--- a/src/index.css
+++ b/src/index.css
@@ -21,13 +21,13 @@
   --transicao-rapida: 0.2s ease-in-out;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
-  /* min-width: 320px;
-  min-height: 100vh; */
-}
+  min-width: 320px;
+  min-height: 100vh;
+} */
 
 
 
